--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-*, *::after, *::before {
+*,
+*::after,
+*::before {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -13,12 +15,32 @@ body {
 h1 {
     margin-top: 1%;
     border-bottom: black solid;
+    margin-bottom: 1%;
 }
 
 .container {
+    display: flex;
+    align-items: center;
+    margin: 10px 10px;
+    border: black solid 1px;
+
+}
+
+.grid-container {
     width: 400px;
     height: 400px;
-    border: solid black 1px;
-    /* padding:17.5% 17.5%; */
-    margin: 20px auto;
+    margin: 4% auto;
+    display: grid;
+    grid-template-columns: auto auto;
+    background-color: #2196F3;
+    padding: 10px;
+}
+
+.grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    /* padding: 0px; */
+    font-size: 30px;
+    text-align: center;
+    transition: all ease 0.6s;
 }
