--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,700&display=swap');
+
 *,
 *::after,
 *::before {
@@ -7,33 +9,247 @@
 }
 
 body {
-    background-color: antiquewhite;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: lightblue;
     text-align: center;
+    font-family: 'Crimson Text', serif;
+
 }
 
 h1 {
     margin-top: 1%;
-    border-bottom: black solid;
     margin-bottom: 1%;
+    font-size: 40px;
 }
 
 .container {
+    height: 100%;
     display: flex;
+    justify-content: space-evenly;
     align-items: center;
     margin: 10px 10px;
-    border: black solid 1px;
+
+}
+
+.options {
+    background-color: rgb(106, 192, 226);
+    width: 40%;
+    height: 450px;
+    align-items: flex-start;
+    padding-top: 5%;
+    border: 1px gray solid;
+    margin-left: 20%;
+
+
+}
+
+/* Grid */
+.grid-size {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+small {
+    color: rgb(150, 22, 22);
+    font-size: 0.7rem;
+}
+
+.grid-size-text {
+    font-size: 1.4rem;
+    display: inline-block;
+    margin-bottom: 4px;
+}
+
+/* Range input */
+
+input[type="range"] {
+    -webkit-appearance: none;
+    width: 150px;
+    height: 8px;
+    outline: none !important;
+    appearance: none;
+    border: none;
+    border-radius: 30px;
+}
+
+input[type="range"]::-moz-focus-outer {
+    border: 0;
+}
+
+input[type="range"]:hover {
+    outline: none;
+}
+
+/* Chrome */
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 9px;
+    height: 20px;
+    background: rgb(145, 6, 70);
+    cursor: pointer;
+    border-radius: 30px;
+    outline: none;
+}
+
+/* Moz */
+
+input[type="range"]::-moz-range-thumb {
+    width: 18px;
+    height: 18px;
+    background: #f1f9f4;
+    cursor: pointer;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+}
+
+input[type="range"]::-moz-range-progress {
+    background-color: #fff;
+    height: 100%;
+    border-radius: 30px;
+    border: none;
+}
+
+input[type="range"]::-moz-range-track {
+    background-color: #ccc;
+    border-radius: 30px;
+    border: none;
+    height: 100%;
+}
+
+/* IE*/
+
+input[type="range"]::-ms-fill-lower {
+    background-color: #fff;
+    height: 100%;
+    border-radius: 30px;
+    border: none;
+}
+
+input[type="range"]::-ms-fill-upper {
+    background-color: #ccc;
+    border-radius: 30px;
+    border: none;
+    height: 100%;
+}
+
+/* tooltip style */
+.tooltip {
+    position: relative;
+    padding-top: 30px;
+
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 30px;
+    background-color: rgb(145, 6, 70);
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+    left: 0px;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: rgb(145, 6, 70) transparent transparent transparent;
+}
+
+small strong {
+    font-size: 0.74rem;
+}
+
+/* Colors */
+.pick-your-color {
+    font-size: 1.4rem;
+    display: inline-block;
+    margin-bottom: 4px;
+}
+
+input[type=radio] {
+    display: none;
+}
+
+.label-of-colors {
+    width: 150px;
+    text-align: center;
+    padding: 5px 4px;
+    background-color: darkcyan;
+    display: inline-block;
+    margin-bottom: 4px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all ease 1s;
+    color: rgb(252, 247, 237);
+}
+
+.label-of-colors:hover {
+    background-color: rgb(51, 224, 224);
+}
+
+button {
+    /* width: 150px; */
+    margin-top: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    padding: 5px 55px;
+    font-size: 1rem;
+    font-family: 'Crimson Text', serif;
+    /* font-weight:900; */
+
+}
+
+button:focus {
+    outline: none;
+}
+
+
+input[type=radio]::after {
+    content: " wewe";
+    height: 10px;
+    width: 30px;
+    background-color: darkgoldenrod;
+    border-radius: 3px;
+}
+
+.grid-size,
+.colors {
+    /* background-color: brown; */
+    text-align: left;
+    padding-left: 20px;
+}
+
+/* Grid System */
+.grid {
+    width: 70%;
+    text-align: right;
+    margin-right: 10%;
 
 }
 
 .grid-container {
-    width: 400px;
-    height: 400px;
-    margin: 4% auto;
+    width: 450px;
+    height: 450px;
+    /* margin: 1% auto; */
     display: grid;
     grid-template-columns: auto auto;
     background-color: #2196F3;
-    padding: 10px;
+    padding: 1px;
 }
 
 .grid-item {
@@ -43,4 +259,34 @@ h1 {
     font-size: 30px;
     text-align: center;
     transition: all ease 0.6s;
+}
+
+
+
+
+@media(max-width: 750px) {
+
+    body {
+        background-color: lightblue;
+    }
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .options {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 5%;
+        padding: 0;
+    }
+
+    .colors {
+        width: 100%;
+    }
 }
